--- a/in_class_ex5/in_class_ex5.qmd
+++ b/in_class_ex5/in_class_ex5.qmd
@@ -87,7 +87,7 @@ colnames(cor_mat) <- paste0(
 cor_image(cor_mat)
 ```
 
-## Model Calibration 
+## Model Calibration
 
 ```{r}
 base_model <- spflow(
@@ -104,4 +104,47 @@ base_model <- spflow(
      
 base_model
   
+```
+
+::: callout-note
+understand the main variable and the lags
+:::
+
+```{r}
+old_par <- par(nfrow = c(1,3),
+               nar = c(2,2,2,2))
+
+spflow_moran_plots(base_model)
+
+```
+
+```{r}
+par(old_par)
+
+corr_residual <- pair_cor(base_model)
+colnames(corr_residual) <- substr(colnames(corr_residual),1,3)
+
+cor_image(corr_residual)
+```
+
+```{r}
+spflow_formula <- log(1 + TRIPS) ~
+  O_(BUSSTOP_COUNT + AGE25_64) +
+  D_(SCHOOL_COUNT +
+  BUSINESS_COUNT +
+  RETAILS_COUNT +
+  FINSERV_COUNT) +
+  P_(log(DISTANCE + 1))
+  
+model_control <- spflow_control(
+  estimation_method = "mle",
+  model = "model_1"
+)
+
+mle_model <- spflow(
+  spflow_formula,
+  spflow_networks = mpsz_multi_net,
+  estimation_control = model_control)
+
+mle_model
 ```
